# hamming_one

./: CMakeLists.txt  generate_sequences.sh  log  plot.py  run.sh  run_tests.sh
src/: HOCBadEncoding.cpp  HOCBadEncoding.h  HOCGoodEncoding.cpp  HOCGoodEncoding.h  HOGPU.cu  HOGPU.cuh  HOne.h  main.cpp  test_generator.cpp  verify.cpp
